# finetune_whisper

./: README.md  pyproject.toml
notebooks/: 1_synthetic_data_generation.ipynb  2_fine_tune_whisper.ipynb  3_create_eval_data.ipynb  fine_tune_whisper_(2).ipynb
