[tool.poetry]
name = "whisper_tune"
version = "0.1.0"
description = "WhisperTune is a comprehensive toolkit designed to improve Automatic Speech Recognition (ASR) for low-resource languages through synthetic data generation and model fine-tuning. It addresses the challenge of limited audio data availability by leveraging text-to-speech technologies and providing robust evaluation metrics."
authors = ["Dilshodjon Juraev <afc1707@gmail.com>"]
readme = "README.md"
packages = [{include = "whisper_tune", from = "src"}]

[tool.poetry.dependencies]
python =  "~3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
python-dotenv = "^1.0.0"
scikit-learn = "^1.2.2"
colab-ssh = "^0.3.27"
torch = "^2.6.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
black = "^23.1.0"
jupyter-black = "^0.3.1"
mypy = "^1.1.1"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-mock = "^3.8.2"
pre-commit = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
